@@ -132,8 +132,9 @@ class Menu {
             $vars['key_id'] = $key->id;
             return PHPWS_Text::secureLink(MENU_LINK_ADD, 'menu', $vars);
         } else {
+            // for dummy keys
             if (empty($key->title)) {
-                $vars['url'] = urlencode(urlencode($key->url));
+                $vars['url']      = urlencode($key->url);
                 $js['question']   = _('Enter link title');
                 $js['address']    = PHPWS_Text::linkAddress('menu', $vars, TRUE, FALSE);
                 $js['link']       = MENU_LINK_ADD;
@@ -141,7 +142,7 @@ class Menu {
                 return javascript('prompt', $js);
             } else {
                 $vars['link_title'] = urlencode($key->title);
-                $vars['url']   = urlencode($key->url);
+                $vars['url']        = urlencode($key->url);
                 return PHPWS_Text::secureLink(MENU_LINK_ADD, 'menu', $vars);
             }
         }
