@@ -1,6 +1,12 @@
 <div class="menu">
     <div class="box">
-        <div  class="box-title">{CLIP}<h1>{PIN_LINK}{ADD_LINK}{ADD_SITE_LINK} {TITLE}</h1></div>
+        <div  class="box-title">{CLIP}
+        <h1>
+        {PIN_LINK}
+        {ADD_LINK}
+        {ADD_SITE_LINK}
+        {TITLE}</h1>
+        </div>
         <div id="menu-links">{LINKS}</div>
         <div class="align-center">{ADMIN_LINK}</div>
     </div>
